--- a/package.json
+++ b/package.json
@@ -109,14 +109,19 @@
     "compression": "^1.6.2",
     "es6-promise": "^4.1.0",
     "express": "^4.15.3",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "0.0.5-beta.2",
     "history": "^4.5.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "node-pre-gyp": "^0.6.36",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-css-modules": "^4.3.0",
     "react-dom": "~15.4.2",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.0.3",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
