--- a/package.json
+++ b/package.json
@@ -132,10 +132,11 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.4.3",
+    "solc": "^0.4.11",
     "store": "^2.0.4",
     "truffle-contract": "^2.0.1",
     "web3": "^0.19.0",
-    "zeppelin-solidity": "^1.0.7"
+    "zeppelin-solidity": "^1.1.0"
   },
   "standard": {
     "globals": [
